# eval-ception

./: .gitignore  README.md  pyproject.toml
certs/airflow-localizer-es/: airflow-es-localizer-exam-pydantic-agent.cert.json
certs/simple-exam/: simple-exam.ollama-agent.cert.json
deepeval/: README.md  test_questions.py
docs/: simple-exam.md  start-here.md
exams/airflow-localizer-es/: README.md  promptfoo_provider_pydantic_skills.py  promptfooconfig.yaml
exams/sketch-to-text/: README.md  promptfoo_provider_claude_skill.py  sketch-to-text.yaml
langfuse/: README.md  docker-compose.yml  test_questions.py
promptfoo/: README.md  grader_provider.py  ollama_provider.py  promptfoo_provider_claude.py  promptfoo_provider_codex.py  promptfoo_provider_opencode.py  promptfoo_to_cert.py  promptfooconfig.yaml  pydantic_agent_with_skills.py  test_grader_provider.py  test_promptfoo_provider_wrappers.py
src/eval_ception_core/: __about__.py  __init__.py  cli_wrapper_agent.py  cli_wrapper_grader.py
src/eval_ception_core/adapters/: __init__.py  promptfoo_results_to_ai_evals_cert.py
src/eval_ception_core/baseline/: __init__.py  crawler.py
tests/: __init__.py  test_baseline_crawler.py  test_cli_wrapper_agent.py  test_cli_wrapper_grader.py
